BUGFIX [31661]: Contrast Issues: Who-is-online text-color on background (#3796)
* Who-Is-Online Contrast Issues

* Who-Is-Online Contrast Issues

* Undo css beautification

* Undo css beautification II

* Undo css beautification III

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -17631,11 +17631,15 @@ body.ilPrtfPdfBody .ilPCMyCoursesToggle img {
 /* Services/Awareness */
 .ilAwarenessDropDown .popover {
   max-width: 300px;
-  color: black;
+  color: #434343;
   min-width: 250px;
 }
 #awareness-list {
   overflow: auto;
+}
+#awareness-list .dropdown-header {
+  background-color: #f9f9f9;
+  margin-bottom: 0px;
 }
 .ilAwarenessDropDown .popover-content {
   padding: 0;
@@ -17656,7 +17660,7 @@ body.ilPrtfPdfBody .ilPCMyCoursesToggle img {
   display: table;
 }
 #awareness-content .media:hover {
-  background-color: #fea;
+  background-color: #e2e8ef;
 }
 #awareness-content .glyphicon {
   font-size: inherit;
@@ -17675,8 +17679,8 @@ body.ilPrtfPdfBody .ilPCMyCoursesToggle img {
   height: 45px;
 }
 .ilAwarenessItem {
-  border-bottom: 1px solid #e9e9e9;
-  background-color: #f9f9f9;
+  border-bottom: 1px solid #dddddd;
+  background-color: white;
 }
 .ilAwarenessItem > div[role='button']:focus-visible {
   outline: 3px solid #0078D7;
@@ -17698,7 +17702,7 @@ body.ilPrtfPdfBody .ilPCMyCoursesToggle img {
 }
 #awareness-content .media-body h4,
 #awareness-content .media-body p {
-  color: #a0a0a0;
+  color: #757575;
   font-size: 12px;
   padding: 5px 3px 0 3px;
   line-height: 1em;
@@ -17706,7 +17710,7 @@ body.ilPrtfPdfBody .ilPCMyCoursesToggle img {
 }
 #awareness-content .media-body h4 {
   padding-top: 0px;
-  color: #606060;
+  color: #434343;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -17717,10 +17721,10 @@ body.ilPrtfPdfBody .ilPCMyCoursesToggle img {
   font-size: 12px;
 }
 #awareness-content .dropdown-menu a {
-  color: #606060;
+  color: #757575;
 }
 #awareness-content .dropdown-menu a:hover {
-  color: #202020;
+  color: #2a2a2a;
 }
 #awareness-content .arrow-down {
   width: 0;
@@ -17781,7 +17785,7 @@ body.ilPrtfPdfBody .ilPCMyCoursesToggle img {
 }
 #awareness-content .ilHighlighted {
   background-color: #e2e8ef;
-  color: #606060;
+  color: #757575;
 }
 .ilAwrnBadgeHidden {
   visibility: hidden;
